--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ArcGIS JavaScript API Map</title>
+    <title>i2O Innovation MAP</title>
     <link rel="stylesheet" href="https://js.arcgis.com/4.25/esri/themes/light/main.css">
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <style>
